tests/typecheck/fail/main_type.gg
fn MaIn() -> int {
    return 42;
}

fn main(int arg) -> int {
    print("main has to be () -> int !!!");
    return 0;
}
